--- a/style.css
+++ b/style.css
@@ -21,3 +21,14 @@ padding: 24px 0;
     margin: 0 16px;
     font-size: 24px;
 }
+
+.escola{
+    background-image: linear-gradient(#000000,#760007);
+color: aliceblue;
+display: flex;
+justify-content: center;
+}   
+
+.escola-div-conteudo{
+    width: 35%;
+}
