--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
 }
-
+.body{
+      font-family: "Single Day";      
+}
 
 .cabecalho {
     background-color: rgb(0, 0, 0);
@@ -27,8 +29,16 @@ padding: 24px 0;
 color: aliceblue;
 display: flex;
 justify-content: center;
+align-items: center ;
 }   
 
 .escola-div-conteudo{
     width: 35%;
 }
+.gorillaz-texto {
+    font-family: "Indie Flower", cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 150%;
+  }
+  
