--- a/style.css
+++ b/style.css
@@ -42,3 +42,19 @@ align-items: center ;
     font-size: 150%;
   }
   
+  .imagem-estudante{
+    width: 360px;
+  }
+
+  .estudante-div{
+    text-align: center ;
+  }
+
+  .estudante-titulo{
+    text-align: center;
+  }
+
+  .estudante-todos{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%; 
+  }
